# Shopify_Discord_Bot

./: README.md  bot.py  main.py  models.py  pyproject.toml  run_bot.py
attached_assets/: Pasted--Environment-updated-Reloading-shell-2025-04-21-03-26-27-441-main-WARNING-DATABASE-U-1745206002925.txt  Pasted--INFO-discord-gateway-Shard-ID-None-has-connected-to-Gateway-Session-ID-f6ae7ea529a11248f7c75367-1745302515169.txt  Pasted-ERROR-cogs-profile-commands-Error-in-profile-creation-404-Not-Found-error-code-10062-Unknown-in-1745302408424.txt
cogs/: monitor_commands.py  price_commands.py  profile_commands.py  store_commands.py  task_commands.py
instance/: ninjabot.db
templates/: analytics.html  index.html  layout.html  settings.html
user_data/: 1355732612018081894.json
utils/: database.py  error_handler.py  proxy_manager.py  shopify_checkout.py  shopify_monitor.py  stock_history.py  success_tracker.py  task_scheduler.py  variant_tracker.py
