[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.17",
    "beautifulsoup4>=4.13.4",
    "discord-py>=2.5.2",
    "email-validator>=2.2.0",
    "flask-sock>=0.7.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "psutil>=7.0.0",
    "schedule>=1.2.2",
]
